[package]
name = "chat-translator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch-irc = "3"
tokio = { version = "1.10.0", features = ["full"] }
chrono = "0.4"
dotenv = "0.15.0"
jmdict = "2.0.0"